adição de estatisticas